--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -13,16 +13,21 @@
         <action
             android:id="@+id/action_listFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
-        <argument
-            android:name="satellite_id"
-            app:argType="integer"
-            android:defaultValue="1" />
+
     </fragment>
 
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.space.satellitetracker.presentation.detail.DetailFragment"
         android:label="fragment_second"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail">
+
+        <argument
+            android:name="satellite_id"
+            app:argType="integer" />
+        <argument
+            android:name="satellite_name"
+            app:argType="string" />
+    </fragment>
 
 </navigation>
